fix: 구분 미 선택으로 검색시 sortNm==null이 동작 안하는 현상 해결
sortNm == null -> sortNm.isEmpty()

chore: 대학 학과 검색이 Name에서 Id로 바뀌었기 때문에 함수 이름 변경